--- a/1_Credit_Card_Analysis/Credit_Card_Analysis.ipynb
+++ b/1_Credit_Card_Analysis/Credit_Card_Analysis.ipynb
@@ -132,7 +132,11 @@
     "            \n",
     "            \n",
     "            \n",
-    "    # Observe Relationship between card type and exp type"
+    "    # Observe Relationship between card type and exp type (Vice versa)\n",
+    "        # Questions to be answered\n",
+    "            # Which Card type dominates most of the subcategories of Exp type\n",
+    "            # Which exp type dominates most of the subcategories of Card Type\n",
+    "    "
    ]
   },
   {
@@ -1541,7 +1545,7 @@
    "id": "0671f43c-3227-4c44-8951-64f16c39f8fb",
    "metadata": {},
    "source": [
-    "### Observe Relationship between card type and exp type"
+    "### Observe Relationship between card type and exp type (Vice Versa)"
    ]
   },
   {
@@ -1668,11 +1672,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "fedc7ab7-a45c-4361-a7aa-4f1d9c5fccb8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Answers\n",
+    "    # Which Card type dominates most of the subcategories of Exp type\n",
+    "        # Silver card holder dominates in all sub categories except Travel.\n",
+    "        # Gold card holder has most transactions in travel sector\n",
+    "    \n",
+    "    # Which exp type dominates most of the subcategories of Card Type\n",
+    "        # Food is the most frequent category in all card types & travel being the least "
+   ]
   }
  ],
  "metadata": {
