--- a/1_Credit_Card_Analysis/Credit_Card_Analysis.ipynb
+++ b/1_Credit_Card_Analysis/Credit_Card_Analysis.ipynb
@@ -75,79 +75,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "7bebf087-1d71-4fe7-bef1-fd41f6b80bdc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Target Variables\n",
-    "\n",
-    "# Task 1 (Single Variable)\n",
-    "\n",
-    "    # Comment on numerical summary for Quantitative variable as well as Categorical variables.\n",
-    "    \n",
-    "    # Observe distribution of Amount (With Visualization)\n",
-    "        # Questions to be answered\n",
-    "            # Which distribution does graph depicts\n",
-    "            # Comment on Outlier\n",
-    "            \n",
-    "    # Comment on count distribution of City (With Visualization)\n",
-    "        # Questions to be answered\n",
-    "            # 3 City having highest no of transactions \n",
-    "            # 3 City having lowest no of transactions \n",
-    "            # Comment on Distribution    \n",
-    "    \n",
-    "\n",
-    "    # Comment on count distribution of 3 categories ( Card Type , Exp Type ,  Gender ) (With Visualization)\n",
-    "        # Questions to be answered\n",
-    "            # Which card type is highly and least used ?\n",
-    "            # In which expense category customer does most and least number of transactions  happens\n",
-    "            # Who does the most no of transactions (Males or Females)\n",
-    "\n",
-    "            \n",
-    "# Task 2 (Multi Variable)            \n",
-    "            \n",
-    "    # Maximimum and minimum contribution to amount for ( Card Type , Exp Type ,  Gender ) (With Visualization)\n",
-    "        # Questions to be answered\n",
-    "            # Which card type has the highest & least contribution to total amount \n",
-    "            # Which Exp Type has the highest & least contribution to total amount \n",
-    "            # Which Gender Type has the highest & least contribution to total amount\n",
-    "\n",
-    "    # 5 point summary wrt amount for each subcategories of ( Card Type , Exp Type , Gender ) (With Visualization)\n",
-    "        # Questions to be answered    \n",
-    "            # Comment on Median and Mean of Gender Type \n",
-    "            # Comment on Median and Mean of Card Type \n",
-    "            # Comment on Median and Mean of Exp Type \n",
-    "            \n",
-    "            # Does any of the sub category among category Gender Type has skewness \n",
-    "            # Does any of the sub category among category Card Type has skewness  \n",
-    "            # Does any of the sub category among category Exp Type has skewness\n",
-    "            \n",
-    "    \n",
-    "    # Comment on count distribution of Gender among (Exp Type , Card Type ) (With Visualization)\n",
-    "        # Questions to be answered\n",
-    "            # Any subcategory in Exp type where no of transactions dominates for men\n",
-    "            # Any subcategory in Card type where no of transactions dominates for men\n",
-    "            \n",
-    "                       \n",
-    "    # Observe Relationship between card type and exp type (Vice versa)\n",
-    "        # Questions to be answered\n",
-    "            # Which Card type dominates most of the subcategories of Exp type\n",
-    "            # Which exp type dominates most of the subcategories of Card Type\n",
-    "    \n",
-    "    \n",
-    "    # Top 5 city and other card type /gender wise / exp type  distribution"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "06d676b4-86b4-4fec-a1db-8c759108b9b7",
    "metadata": {
     "tags": []
    },
    "source": [
-    "### Check and Clean Dataframe"
+    "### 0. Check and Clean Dataframe"
    ]
   },
   {
@@ -316,11 +250,10 @@
    "cell_type": "markdown",
    "id": "b923c7d9-da59-42f2-b92a-e259001ae0a6",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "### Comment on numerical summary for Quantitative variable as well as Categorical variables"
+    "### 1. Comment on numerical summary for Quantitative variable as well as Categorical variables"
    ]
   },
   {
@@ -412,17 +345,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "d3e0b435-afa1-4970-9225-1b7ac814e1f1",
+   "cell_type": "raw",
+   "id": "a26d98d6-23ad-4662-a552-fa775a4b3bc8",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### City           Bengaluru has the highest now of transactions. \n",
-    "### Date           20-Sept-2014 have highest no of transactions recorded.\n",
-    "### Card Type      Silver is the most freuent card type. \n",
-    "### Exp Type       Most No of transactions are present for food category related.\n",
-    "### Gender         Females contribute to most of the transactions"
+    "1. On looking the summary for Categorical variables : - \n",
+    "\n",
+    "    - > We got to know about the following points\n",
+    "    \n",
+    "               * Bengaluru is most frequent in transactions. \n",
+    "               * Silver is the most used card Category type.\n",
+    "               * Most of the transactions are done in food Category. \n",
+    "               * Female Does the most no of transactions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffa415c1-c3c1-465f-bfbf-62a03d116a9e",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### 2. Observe distribution of Amount"
    ]
   },
   {
@@ -510,29 +454,7 @@
     }
    ],
    "source": [
-    "df.describe() # To describe stats for quantitative column"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "b0d2fcd3-f477-4c5d-92b7-059cfa2bbf2c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Just looking at mean and median for amount we can see there is a slight deviation between mean and median\n",
-    "### Mean is on higher side so there will be transactions on higher end \n",
-    "### Graph is expected to be deviated towards right (Right Skewness (+))."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ffa415c1-c3c1-465f-bfbf-62a03d116a9e",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Observe distribution of Amount"
+    "df['Amount'].describe() # To describe stats for quantitative column"
    ]
   },
   {
@@ -578,22 +500,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "bffead92-3c7b-4f3b-bc09-11a1021db248",
+   "cell_type": "raw",
+   "id": "a626749b-518b-4f2f-8d3e-df6f11c24b03",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Observe distribution of Amount\n",
-    "        # Which distribution does graph depicts\n",
-    "           # Looking at graph 1 we can conclude it follows almost a uniform distribution with outliers\n",
-    "        \n",
-    "        # Comment on Outlier\n",
-    "            # Graph 2 gives us better idea on presence of outliers \n",
+    "2. On looking the Distribution of Amount\n",
+    "    \n",
+    "    * Using Describe Summary \n",
+    "                \n",
+    "        -> we can see amount ranging from 1005 to 998077\n",
     "            \n",
-    "        # Suggest which method beter to handle outlier if needed to handle in such scenarios\n",
-    "            # Since it does not follow normal distribution it will be better to avoid z score \n",
-    "            # Use Iqr method"
+    "               * 25% of transactions amount lies between 1005 to 77k. \n",
+    "               * Middle 50 % of transactions lies between 77k to 228k. \n",
+    "               * 25 % of transaction lies between 228k to 998k.     \n",
+    "    \n",
+    "    \n",
+    "    * Using skewness method \n",
+    "    \n",
+    "        -> we got the skewnss for the amount which was 1.7 and anything greater then 1 is highly skewed.\n",
+    "    \n",
+    "    \n",
+    "    * Using Histplot \n",
+    "            \n",
+    "        -> we observed It followed a uniform distribution with high peaks initially starting from thousand to around 3 lakh.\n",
+    "        -> Followed by few no of transactions upto 10 lakh (negligible compared to above).\n",
+    "        -> Since it does not follow Normal distribution so iqr method gives the proper view of outliers.\n",
+    "        \n",
+    "        \n",
+    "    * Using Boxplot\n",
+    "        \n",
+    "        -> we can observe the above same stats as describe (approx)\n",
+    "        -> we can see the presence of outlier shown as points after whisker end (which extended eitherways to 1.5 times the iqr from q3,q1 by default)."
    ]
   },
   {
@@ -603,7 +540,7 @@
     "tags": []
    },
    "source": [
-    "### Comment on count distribution of City (With Visualization)"
+    "### 3. Comment on count distribution of City (With Visualization)"
    ]
   },
   {
@@ -676,23 +613,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3cb70a3d-84fd-43e6-b41f-dee61a5b50c9",
+   "cell_type": "raw",
+   "id": "ea55ce4e-ba0c-4cf6-b120-222eca2fce13",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Answers\n",
+    "3. On Observing the city column \n",
     "\n",
-    "# 3 City having highest no of transactions \n",
-    "    # Top 3 City  ->  ['Bengaluru', 'Greater Mumbai', 'Ahmedabad']\n",
-    "\n",
-    "# 3 City having lowest no of transactions\n",
-    "    # Last 3 City ->  ['Alirajpur', 'Bagaha', 'Changanassery']\n",
+    "    * Group by \n",
     "    \n",
-    "# Comment on Distribution    \n",
-    "    # top 4 city out of 986 city contribute over 50 % of the transactions \n",
-    "    # after top 4 there is a sharp drop in numbers from thousands to hundreds (moving from 4th to 5th city)"
+    "       -> we get the top 3 city as per no of transactions using nlargest fucntion.\n",
+    "       -> we got the bottom 3 city as per no of transactions using nsmallest function.\n",
+    "   \n",
+    "   \" Since there were many catergories so Before visualizing we grouped  all city's other then top 5 into 'Others' so we now have 6 categories in city column \"   \n",
+    "   \n",
+    "    * Barplot\n",
+    "       -> Bengaluru has the highest peak with the most no of transactions\n",
+    "       -> Peak between top 4 does not have sharp deviation but moving to 5 we see a sharp drop in peak  \n",
+    "       -> this gives fair idea about the importance of top 4 but it will be better to observe proportion\n",
+    "       \n",
+    "    \n",
+    "    * Pieplot\n",
+    "    \n",
+    "       -> This gives us the idea that first 5 out of 986 countries contributes over 56.8% of the transactions.\n",
+    "       -> other 981 contributes to around 43.2% of the transactions"
    ]
   },
   {
@@ -1465,6 +1408,7 @@
    "cell_type": "markdown",
    "id": "ca7814b0-47f8-4430-a321-dbe71321e33e",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1996,6 +1940,7 @@
    "cell_type": "markdown",
    "id": "08910c16-771d-45a9-b960-dd680d2e57ce",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2113,6 +2058,7 @@
    "cell_type": "markdown",
    "id": "0671f43c-3227-4c44-8951-64f16c39f8fb",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
