--- a/1_Credit_Card_Analysis/Credit_Card_Analysis.ipynb
+++ b/1_Credit_Card_Analysis/Credit_Card_Analysis.ipynb
@@ -2,7 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 70,
+   "id": "20ee6833-d7d7-40ea-b022-02c6df549fb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Content\n",
+    "#### 0   | Check and Clean Dataframe\n",
+    "#### 1   | Comment on numerical summary for Quantitative variable as well as Categorical variables\n",
+    "#### 2   | Observe distribution of Amount\n",
+    "#### 3.1 | Comment on count distribution of City (With Visualization)\n",
+    "#### 3.2 | Relation of city with card type /gender wise / exp type distribution\n",
+    "#### 3.3 | Relation of city with amount\n",
+    "#### 4.1 | Comment on count distribution of 3 categories ( Card Type , Exp Type , Gender )\n",
+    "#### 4.2 | Maximimum and minimum contribution to amount for ( Card Type , Exp Type , Gender )\n",
+    "#### 4.3 | 5 point summary wrt amount for each subcategories of ( Card Type , Exp Type , Gender )\n",
+    "#### 5.1 | Comment on count distribution of Gender among (Exp Type , Card Type )\n",
+    "#### 5.2 | Observe Relationship between card type and exp type (Vice Versa)\n",
+    "#### Conclusion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "8f1dd5ee-aaa3-40ce-89e5-7df31f74ea6f",
    "metadata": {},
    "outputs": [],
@@ -17,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "00231a5e-0a92-47bb-8348-dc1cd27d7da7",
    "metadata": {},
    "outputs": [],
@@ -30,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "0b8900cf-98f1-4c02-8456-4b8c2765e7bd",
    "metadata": {},
    "outputs": [
@@ -48,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "428fb5c5-3cb1-41a0-bd7d-97c629f9e460",
    "metadata": {},
    "outputs": [],
@@ -58,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "30cb4eaf-f05d-4c20-8432-e9e8b4f1afa4",
    "metadata": {},
    "outputs": [
@@ -228,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "e0306332-92e1-485f-a1fc-b4487a48af04",
    "metadata": {},
    "outputs": [],
@@ -250,7 +272,6 @@
    "cell_type": "markdown",
    "id": "b923c7d9-da59-42f2-b92a-e259001ae0a6",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -481,7 +502,6 @@
    "cell_type": "markdown",
    "id": "5b1f41ea-16d3-4abe-8d11-a81d4d16a83b",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -564,7 +584,9 @@
     "tags": []
    },
    "source": [
-    "3. On Observing the city column \n",
+    "3.1 \n",
+    "\n",
+    "On Observing the city column \n",
     "\n",
     "***\n",
     "   * Group by \n",
@@ -592,7 +614,6 @@
    "cell_type": "markdown",
    "id": "65fcd2f0-ea99-4a6f-b4c2-fc4df34a4cc8",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -897,6 +918,7 @@
    "id": "b736f7d1-713b-4276-990f-d928a1aea7e2",
    "metadata": {},
    "source": [
+    "3.2\n",
     "***\n",
     "##### Distribution of gender in top 5 city\n",
     "\n",
@@ -1294,22 +1316,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1af4f1e-bebb-4bb1-90d5-84e47cf6a697",
+   "cell_type": "markdown",
+   "id": "132da7e0-6212-4b39-9faf-27565ed698b5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "3.3\n",
+    "***\n",
+    "* Box plot Graph - Understanding Distribution of Amount City wise\n",
+    "    * Min amount and Median amount for all city category lies close to each other \n",
+    "    * Top 4 city has presence of outlier which is the amount greater then (1.5 * iqr + q3)\n",
+    "***\n",
+    "* Bar Plot - Understanding Mean City wise\n",
+    "    * Mean amount for transaction lies around 150k (approx)\n",
+    "    * Hyderabad has the least mean in top 5 cities\n",
+    "    \n",
+    "***       \n",
+    "* Bar Plot - Understanding Total Amount City wise\n",
+    "    * Mumbai has the highest total sum of amount followed by the bengaluru\n",
+    "***    \n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "dfcb7ba4-46a0-42bf-b5ba-d7d2c389333c",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "### Comment on count distribution of 3 categories ( Card Type , Exp Type ,  Gender )"
+    "### 4.1 | Comment on count distribution of 3 categories ( Card Type , Exp Type ,  Gender )"
    ]
   },
   {
@@ -1366,55 +1401,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "dd61230f-d942-4c92-8064-a9c688944ab6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Graph - Distribution of Gender in transactions\n",
-    "    # It tells the no of transactions done by female is 5 % more then the male\n",
-    "\n",
-    "\n",
-    "# Graph - Distribution of Expense Category in transactions\n",
-    "    # We have 6 different categories\n",
-    "    # Food has the highest 20.97%\n",
-    "    # We can see most of Exp type categories (5 out of 6) has transaction share between 18.25 to 20.97 \n",
-    "    # We have (travel) 1 out of 6 category which has the least share with 2.83 %\n",
-    "    \n",
-    "    \n",
-    "# Graph - Distribution of Card Type in transactions\n",
-    "    # We have 4 different card type categories\n",
-    "    # All 4 transaction share lie between 24.44 % to 26.26 %\n",
-    "    # Silver is the most used card type"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "a18f9ab5-2db6-43d2-b050-5f6c3a40e74a",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "#### Answers "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "e2cb55a6-444b-44c8-9972-c765ec812ffc",
+   "id": "f9853101-cbfc-4dd9-9973-743a4fea03ba",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Which card type is highly and least used ?\n",
-    "    # Silver is the highest used card & Gold is the least\n",
-    "    \n",
-    "# In which expense category customer does most and least number of transactions  happens ?\n",
-    "    # Food has the highest no of transactions \n",
-    "    # Travel has the lowest no of transactions\n",
-    "\n",
-    "# Who does the most no of transactions (Males or Females)\n",
-    "    # Females has the most no of transactions \n",
+    "4.1\n",
+    "***\n",
+    "* Graph - Distribution of Gender in transactions\n",
+    "    * It tells the no of transactions done by female is 5 % more then the male\n",
+    "***\n",
+    "* Graph - Distribution of Expense Category in transactions\n",
+    "    * We have 6 different categories\n",
+    "    * Food has the highest 20.97%\n",
+    "    * We can see most of Exp type categories (5 out of 6) has transaction share between 18.25 to 20.97 \n",
+    "    * We have (travel) 1 out of 6 category which has the least share with 2.83 %\n",
+    "***       \n",
+    "* Graph - Distribution of Card Type in transactions\n",
+    "    * We have 4 different card type categories\n",
+    "    * All 4 transaction share lie between 24.44 % to 26.26 %\n",
+    "    * Silver is the most used card type\n",
+    "***    \n",
     "    "
    ]
   },
@@ -1422,11 +1428,10 @@
    "cell_type": "markdown",
    "id": "3e4a78a0-6540-4330-a9c4-ba49569090d4",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "### Maximimum and minimum contribution to amount for ( Card Type , Exp Type ,  Gender )"
+    "### 4.2 | Maximimum and minimum contribution to amount for ( Card Type , Exp Type ,  Gender )"
    ]
   },
   {
@@ -1465,34 +1470,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "82ca28d1-e0cc-4d66-8850-f9e5a7267592",
+   "cell_type": "markdown",
+   "id": "5bcf008d-b948-4593-9c5c-da2ed5f0f418",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Answers\n",
-    "\n",
-    "# Which card type has the highest & least contribution to total amount \n",
-    "        # Silver has the highest overall amount while gold is least \n",
-    "    \n",
-    "# Which Exp Type has the highest & least contribution to total amount \n",
-    "        # Bills has the highest overall amount while travel is least\n",
-    "    \n",
-    "# Which Gender Type has the highest & least contribution to total amount\n",
-    "        # Female has the highest overall amount then men\n",
-    "           "
+    "4.2\n",
+    "***\n",
+    "* Graph - Distribution of Gender in Total Amount\n",
+    "    * Female has the highest total amount then male\n",
+    "***\n",
+    "* Graph - Distribution of Expense Category in Total Amount\n",
+    "    * Bills has the highest total amount and travel has the least\n",
+    "***       \n",
+    "* Graph - Distribution of Card Type in Total Amount\n",
+    "    * Silver contributes highest to the total amount and gold has the least contribution\n",
+    "***    \n",
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
    "id": "ca7814b0-47f8-4430-a321-dbe71321e33e",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "### 5 point summary wrt amount for each subcategories of ( Card Type , Exp Type ,  Gender )"
+    "### 4.3 | 5 point summary wrt amount for each subcategories of ( Card Type , Exp Type ,  Gender )"
    ]
   },
   {
@@ -1988,43 +1991,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "2693293e-3ee6-433b-a594-1d3346c39207",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "6d16f597-da8e-4b0f-ae51-038ca101d625",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "# Comment on Median and Mean of Gender Type ?\n",
-    "    # Median is almost close.\n",
-    "    # Mean for female seems to be high which is influenced by presence of transactions having high amount value.\n",
-    "\n",
-    "# Comment on Median and Mean of Card Type \n",
-    "   # Median is almost close for all subcategories in Card Type\n",
-    "   # Mean for Bills seems to be high which is influenced by presence of transactions having high amount value.\n",
-    "    \n",
-    "# Comment on Median and Mean of Exp Type \n",
-    "   # Median is almost close for all subcategories in Card Type\n",
-    "   # Mean is almost close for all subcategories in Card Type \n",
-    "\n",
-    "# Does any of the sub category among category Gender Type has skewness \n",
-    "   # Looking at the box plot as well as skewness value we can say female transactions are highly skewed\n",
-    "\n",
-    "# Does any of the sub category among category Card Type has skewness  \n",
-    "  # Looking at the box plot as well as skewness value we can say Bill Category for transactions are highly skewed\n",
-    "\n",
-    "# Does any of the sub category among category Exp Type has skewness\n",
-    "  # All sub category has skewness "
+    "4.3\n",
+    "***\n",
+    "* Comment on Median and Mean of Gender Type \n",
+    "    * Median is almost close.\n",
+    "    * Mean for female seems to be high which is influenced by presence of transactions having high amount value.\n",
+    "***\n",
+    "* Comment on Median and Mean of Card Type \n",
+    "   * Median is almost close for all subcategories in Card Type\n",
+    "   * Mean for Bills seems to be high which is influenced by presence of transactions having high amount value.\n",
+    "***    \n",
+    "* Comment on Median and Mean of Exp Type \n",
+    "   * Median is almost close for all subcategories in Card Type\n",
+    "   * Mean is almost close for all subcategories in Card Type \n",
+    "***\n",
+    "* Does any of the sub category among category Gender Type has skewness \n",
+    "   * Looking at the box plot as well as skewness value we can say female transactions are highly skewed\n",
+    "***\n",
+    "* Does any of the sub category among category Card Type has skewness  \n",
+    "  * Looking at the box plot as well as skewness value we can say Bill Category for transactions are highly skewed\n",
+    "***\n",
+    "* Does any of the sub category among category Exp Type has skewness\n",
+    "  * All sub category has skewness \n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "08910c16-771d-45a9-b960-dd680d2e57ce",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "### Comment on count distribution of Gender among (Exp Type ,  Card Type )"
+    "### 5.1 | Comment on count distribution of Gender among (Exp Type ,  Card Type )"
    ]
   },
   {
@@ -2121,17 +2126,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "89c027bb-df03-4178-a053-23984dc3c18f",
+   "cell_type": "markdown",
+   "id": "70bee8ea-1f2b-4d60-867e-f71f001991c7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Answers\n",
-    "            # Any subcategory in Exp type where no of transactions dominates for men\n",
-    "                # Only in Fuel subcategory  \n",
-    "            # Any subcategory in Card type where no of transactions dominates for men\n",
-    "                # No , All subcategories dominated by womens"
+    "5.1\n",
+    "***\n",
+    "* Graph - Distribution of Gender in transactions over Exp Type\n",
+    "    * Female has high no transactions in almost all exp category except fuel\n",
+    "***\n",
+    "* Graph - Distribution of Gender in transactions over over Card Type\n",
+    "    * Female has high no transactions in all Card type\n",
+    "***       "
    ]
   },
   {
@@ -2141,7 +2147,7 @@
     "tags": []
    },
    "source": [
-    "### Observe Relationship between card type and exp type (Vice Versa)"
+    "### 5.2 | Observe Relationship between card type and exp type (Vice Versa)"
    ]
   },
   {
@@ -2267,19 +2273,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "fedc7ab7-a45c-4361-a7aa-4f1d9c5fccb8",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "ecee5f3f-0224-4de6-8ef6-f5fe2dd4d39a",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "# Answers\n",
-    "    # Which Card type dominates most of the subcategories of Exp type\n",
-    "        # Silver card holder dominates in all sub categories except Travel.\n",
-    "        # Gold card holder has most transactions in travel sector\n",
+    "## Conclusion "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46e583cd-2414-41fa-ac2b-6571f1f805fc",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "* 3 City having highest no of transactions ?\n",
+    "    * Top 3 City  ->  ['Bengaluru', 'Greater Mumbai', 'Ahmedabad']\n",
+    "***\n",
+    "* 3 City having lowest no of transactions ?\n",
+    "    * Last 3 City ->  ['Alirajpur', 'Bagaha', 'Changanassery']\n",
+    "***\n",
+    "* Which card type is highly and least used ?\n",
+    "    * Silver is the highest used card & Gold is the least    \n",
+    "***        \n",
+    "* In which expense category customer does most and least number of transactions  happens ?\n",
+    "    * Food has the highest no of transactions \n",
+    "    * Travel has the lowest no of transactions\n",
+    "***\n",
+    "* Who does the most no of transactions (Males or Females) ?\n",
+    "    * Females has the most no of transactions \n",
+    "***\n",
+    "* Which card type has the highest & least contribution to total amount ?\n",
+    "    * Silver has the highest overall amount while gold is least \n",
+    "***    \n",
+    "* Which Exp Type has the highest & least contribution to total amount ?\n",
+    "    * Bills has the highest overall amount while travel is least\n",
+    "***    \n",
+    "* Which Gender Type has the highest & least contribution to total amount ?\n",
+    "    * Female has the highest overall amount then men\n",
+    "***\n",
+    "* Any subcategory in Exp type where no of transactions dominates for men\n",
+    "    * Only in Fuel subcategory\n",
+    "***    \n",
+    "* Any subcategory in Card type where no of transactions dominates for men\n",
+    "    * No , All subcategories dominated by womens\n",
+    "***\n",
+    "* Which Card type dominates most of the subcategories of Exp type\n",
+    "    * Silver card holder dominates in all sub categories except Travel.\n",
+    "    * Gold card holder has most transactions in travel sector\n",
+    "***    \n",
+    "* Which exp type dominates most of the subcategories of Card Type\n",
+    "    * Food is the most frequent category in all card types & travel being the least \n",
     "    \n",
-    "    # Which exp type dominates most of the subcategories of Card Type\n",
-    "        # Food is the most frequent category in all card types & travel being the least "
+    "***\n"
    ]
   }
  ],
