--- a/1_Credit_Card_Analysis/Credit_Card_Analysis.ipynb
+++ b/1_Credit_Card_Analysis/Credit_Card_Analysis.ipynb
@@ -75,7 +75,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv(\"/Users/abhi011097/Workspace/Dataset_Analysis/1_Credit_Card_Analysis/Dataset/Credit_card_transactions.csv\")"
+    "df=pd.read_csv(\"/kaggle/input/analyzing-credit-card-spending-habits-in-india/Credit card transactions - India - Simple.csv\")\n",
+    "#df=pd.read_csv(\"/Users/abhi011097/Workspace/Dataset_Analysis/1_Credit_Card_Analysis/Dataset/Credit_card_transactions.csv\")"
    ]
   },
   {
