--- a/1_Credit_Card_Analysis/Credit_Card_Analysis.ipynb
+++ b/1_Credit_Card_Analysis/Credit_Card_Analysis.ipynb
@@ -1286,7 +1286,9 @@
    "cell_type": "code",
    "execution_count": 64,
    "id": "6bfb6dc2-e881-4dd1-9aa2-1700bc2975d3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
