--- a/4_World_Happiness_Report/World_Happiness_Report_Analysis.ipynb
+++ b/4_World_Happiness_Report/World_Happiness_Report_Analysis.ipynb
@@ -40,7 +40,7 @@
     " <b>5 | Comparision Summary wrt Previous Reports</b>\n",
     " \n",
     "    5.1 Coutries Performance Comparision wrt 2018\n",
-    "    52. Score Variation for Ranked 1 Country Over 5 year\n"
+    "    5.2 Score Variation for Ranked 1 Country Over 5 year\n"
    ]
   },
   {
