--- a/5_Iries_Species/Iries_Species_Eda.ipynb
+++ b/5_Iries_Species/Iries_Species_Eda.ipynb
@@ -1797,21 +1797,6 @@
     "***\n",
     "#### 3.2 | Individual Column Shape \n",
     "\n",
-    "***\n",
-    "* Approximately symmetric\n",
-    "    * Score\n",
-    "    * GDP per capita\n",
-    "***\n",
-    "\n",
-    "* Moderately Skewed\n",
-    "    * Healthy life expectancy (Presence of low values causing left skewness)\n",
-    "    * Freedom to make life choices (Presence of low values causing left skewness)\n",
-    "    * Generosity (Presence of High values causing right skewness)\n",
-    "***\n",
-    "* Highly Skewed\n",
-    "    * Social support (Presence of low values causing left skewness)\n",
-    "    * Perceptions of corruption (Presence of High values causing right skewness)\n",
-    "\n",
     "***"
    ]
   },
@@ -3615,9 +3600,7 @@
     "tags": []
    },
    "source": [
-    "#### 4.1 | Creating Relation Matrix and Graph\n",
-    "\n",
-    "* Keeping score out of the rank and score since strong correlation. (Score decides rank)"
+    "#### 4.1 | Creating Relation Matrix and Graph"
    ]
   },
   {
